--- a/.github/workflows/master_credit-service.yml
+++ b/.github/workflows/master_credit-service.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,4 +50,4 @@ jobs:
           app-name: 'credit-service'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E9D38DA94EC74ED982A2EDBB5E38F0D2 }}
-          package: '*.war'
+          package: '*.jar'
